# Synthetic-Data-Benchmark

./: .gitignore  .gitmodules  main.py  postprocess.py  pyproject.toml
.github/workflows/: cond-quality.yaml
src/: constants.py
src/benchmark_tool/: argparser.py  benchmark_tool.py  metric_wrappers.py
src/feature_order/: __init__.py  corelation_based_order.py  graph_based_order.py  tree_based_order.py
src/metrics/: __init__.py
src/metrics/difficulty_metrics/: concordance_index.py  minimal_tree.py  model_aoc.py  model_auc.py
src/metrics/privacy_metrics/: distance_to_nearest_neighbour.py  k_anonimity.py  unlinkability.py
src/metrics/quality_metrics/: dataset_statistics.py  distance_to_nearest_neighbour.py  k_anonimity.py
src/metrics/similarity_metrics/: convex_hull.py  discriminator.py  identity.py
src/model_wrappers/: ctgan_generator.py  default_tab_ddpm_config.toml  full_tabpfn_gen.py  neural _spline_flows_generator.py  neural_spline_flows_generator.py  random_generator.py  real_data_generator.py  smote_generator.py  tab_ddpm_generator.py
src/report_generator/: main.py
src/report_generator/aggregators/: auc_aggregator.py  convex_hull_aggregator.py  distance_to_nearest_aggregator.py  distribution_aggregator.py  k_anonimity_aggregator.py  single_value_aggregator.py  statistics_aggregator.py  svn_discrimination_aggregator.py  tree_depth_relation_aggregator.py  unlinkability_aggregator.py
src/report_generator/postprocessors/: auc_postprocessor.py  base_postprocessor.py  convex_hull_postprocessor.py  distance_to_nearest_neighbour_postprocessor.py  k_anonimity_postprocesssor.py  (+5 more)
src/test_datasets/: clasification_datasets.py  regression_datasets.py
