[project]
name = "data-quality-measurement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ctgan>=0.11.1",
    "huggingface-hub>=1.19.0",
    "imbalanced-learn==0.14.0",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "nflows>=0.14",
    "openml==0.15.1",
    "pandas>=3.0.1",
    "ruff>=0.15.2",
    "scikit-learn==1.5.2",
    "scipy>=1.17.1",
    "setuptools<82.0.0",
    "smogn>=0.1.2",
    "tabicl>=2.1.1",
    "tabpfgen==0.1.4",
    "tabpfn>=8.0.8",
    "torch==2.9.0",
    "tqdm>=4.67.3",
    "xgboost==3.0.2",
]
