[project]
name = "data-quality-measurement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "catboost>=1.2.10",
    "category-encoders>=2.7.0",
    "ctgan>=0.11.1",
    "huggingface-hub>=1.19.0",
    "icecream>=2.2.0",
    "imbalanced-learn==0.14.0",
    "kagglehub>=1.0.2",
    "libzero>=0.0.8",
    "matplotlib>=3.11.0",
    "nflows>=0.14",
    "numpy==2.4.2",
    "openml==0.15.1",
    "pandas>=3.0.1",
    "rtdl>=0.0.13",
    "ruff>=0.15.2",
    "scikit-learn==1.5.2",
    "scikit-survival>=0.23.1",
    "scipy>=1.17.1",
    "setuptools<82.0.0",
    "skorch>=1.4.0",
    "smogn>=0.1.2",
    "tabicl>=2.1.1",
    "tabpfgen==0.1.4",
    "tabpfn>=8.0.8",
    "toml>=0.10.2",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
    "torch==2.9.0",
    "tqdm>=4.67.3",
    "xgboost==3.0.2",
]
[tool.uv]
override-dependencies = [
    "torch>=2.0.0",
    "numpy==1.26.4"
]
